Fixed alignment for new organization user

--- a/app/assets/stylesheets/organization/organization_users_list.css.scss
+++ b/app/assets/stylesheets/organization/organization_users_list.css.scss
@@ -37,7 +37,8 @@
   font-size: 20px;
   color: white;
 }
-.OrganizationList-user:nth-child(3n) { margin-right: 0 }
+.OrganizationList-user:nth-child(3n),
+.OrganizationList > div:nth-child(3n) .OrganizationList-user { margin-right: 0 }
 .OrganizationList-userLink {
   @include display-flex();
   @include justify-content(space-between, justify);
